--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.5.5",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
@@ -18,5 +20,20 @@
     "sequelize": "^3.21.0",
     "sequelize-cli": "^2.3.1",
     "serve-favicon": "~2.3.0"
+  },
+  "description": "",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cross-fox-2017/anagram-basic.git"
+  },
+  "author": "Syanmil",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/cross-fox-2017/anagram-basic/issues"
+  },
+  "homepage": "https://github.com/cross-fox-2017/anagram-basic#readme",
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
