--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "postgres",
     "password": "admin",
-    "database": "anagram_dev",
+    "database": "anagram",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "admin",
-    "database": "anagram_dev",
+    "database": "anagram",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
     "password": "admin",
-    "database": "anagram_dev",
+    "database": "anagram",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
